--- a/La Mia Pizzeria 1/Views/Pizza/Prodotti.cshtml
+++ b/La Mia Pizzeria 1/Views/Pizza/Prodotti.cshtml
@@ -19,7 +19,7 @@ else
             {
                 <br>
                 <div class="col-12 m-md-auto" style="width: 18rem;">
-                    <div class="card shadow bg-body rounded">
+                    <div class="card shadow bg-body rounded" style="margin-bottom: 30px">
 
                         <img src="@pizza.Image" class="card-img-top ca-img" alt="Pizza">
                       
