--- a/La Mia Pizzeria 1/Views/Pizza/Prodotti.cshtml
+++ b/La Mia Pizzeria 1/Views/Pizza/Prodotti.cshtml
@@ -1,5 +1,5 @@
 ﻿
-
+@*/
 
 @model List<Pizza>
 
@@ -50,7 +50,106 @@ else
     </div>
 
 }
+/*@
 
+
+<div class="container">
+    <div class="row">
+        <div class="col-12">
+            <div class="d-flex justify-content-between align-items-center">
+                <h1 class="mt-3 mb-3 text-center">Le nostre Pizze</h1>
+                <div>
+                    <input id="input_search" type="text" class="form-control" placeholder="Cerca per titolo..." />
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="spinner-loader" class="d-flex justify-content-center">
+        <div class="spinner-border mt-5" role="status">
+            <img style="width:50px;" src="https://1.bp.blogspot.com/-CAroinPVLPw/X9GYFpVZ4DI/AAAAAAABcs8/EVBG1MUGq9wj56i-HKNzi5JHpDaERVlxwCNcBGAsYHQ/s509/food_pizza_whole.png" class="sr-only" />
+        </div>
+    </div>
+    <div id="contenitore_no_articoli" class="row text-center d-none">
+        <div class="col-12">
+            <h3>Non hai inserito alcun post</h3>
+        </div>
+    </div>
+    <div id="contenitore_articoli" class="row d-none">
+        <!-- qui verranno mostrati gli elementi -->
+    </div>
+</div>
+
+@section Scripts {
+
+    <script type="text/javascript">
+
+        loadArticoli();
+
+        document.getElementById('input_search').addEventListener('keyup', searchArticles);
+
+        function searchArticles() {
+            let stringaDiRicerca = document.getElementById('input_search').value;
+            loadArticoli(stringaDiRicerca);
+        }
+
+        function loadArticoli(searchString) {
+
+            axios.get('/api/articoli', {
+                params: {
+                    search: searchString
+                }
+            }
+            ).then((res) => {
+
+                console.log('risultato ok');
+                console.log(res);
+
+                debugger;
+
+                if (res.data.length > 0) {
+                    document.getElementById('contenitore_articoli').classList.remove('d-none');
+                    document.getElementById('contenitore_no_articoli').classList.add('d-none');
+
+                    document.getElementById('contenitore_articoli').innerHTML = '';
+
+                    res.data.forEach(articolo => {
+
+                        console.log('articolo: ', articolo);
+
+                        document.getElementById('contenitore_articoli').innerHTML +=
+                            `
+                                    <div class="col-12 col-md-4 p-2">
+                                        <div class="card post h-100">
+                                        <a href="/Home/Details/${articolo.id}">
+                                            <img src="${articolo.image}" class="card-img-top" alt="...">
+                                            <div class="card-body">
+                                                <h5 class="card-title">${articolo.title}</h5>
+                                                <p class="card-text">${articolo.description}</p>
+                                            </div>
+                                        </a>
+                                        </div>
+                                    </div>
+                                    `;
+                    });
+
+                } else {
+
+                    document.getElementById('contenitore_no_articoli').classList.remove('d-none');
+                    document.getElementById('contenitore_articoli').classList.add('d-none');
+
+
+                }
+
+                document.getElementById('spinner-loader').classList.add('d-none');
+            }).catch((error) => {
+                console.log(error);
+            });
+
+        }
+
+    </script>
+
+}
 
 
 
