--- a/La Mia Pizzeria 1/Views/Shared/_LayoutApp.cshtml
+++ b/La Mia Pizzeria 1/Views/Shared/_LayoutApp.cshtml
@@ -31,10 +31,13 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Pizza" asp-action="Prodotti">Prodotti</a>
                         </li>
+
                     </ul>
+                    <partial name="_LoginPartial"/>
                 </div>
             </div>
         </nav>
+        
         <div class="img-h" style="background-image:url(https://media-assets.lacucinaitaliana.it/photos/61fb1a956d97db015b40d56d/16:9/w_2560%2Cc_limit/quando-aggiungere-gli-ingredienti-sulla-pizza-consigli-idee-la-cucina-italiana.jpg)">
       
            
@@ -43,6 +46,20 @@
     
 
     <main>@RenderBody()</main>
+    @RenderSection("OtherSection", required: false)
+
+
+    <!-- Optional JavaScript; choose one of the two! -->
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+    <!-- Importazione di AXIOS nel vostro layout per ogni pagina, in modo che se abbiamo bisogno di una chiamata a delle API possiamo utilizzare questo strumento per fare chiamate in GET; POST; PUT; DELETE tramite JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0/axios.min.js"></script>
+
+    @RenderSection("Scripts", required: false)
+
+</body>
+</html>
     <footer>
         <div class="footer-container" style="background-image: url(https://www.aetitalia.it/download/bab0c04_sfondomarmonero.jpg)">
             <hr class="hr">
@@ -64,6 +81,3 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
     @RenderSection("OtherSection", required: false)
-
-  </body>
-</html>
