--- a/La Mia Pizzeria 1/Views/Home/Details.cshtml
+++ b/La Mia Pizzeria 1/Views/Home/Details.cshtml
@@ -13,7 +13,7 @@
 
         const id = window.location.href.substring(window.location.href.lastIndexOf('/') + 1);
         debugger;
-        axios.get(`http://localhost:7211/api/Articoli ${id}`).then((res) =>
+        axios.get(`https://localhost:7211/api/Articoli/${id}`).then((res) =>
                 {
             let articolo = res.data;
             console.log('articolo ricevuto', articolo);
